Update doc configs and minor text changes.
Update doc/conf.py to new version
Add a :no-inherited-members: option to the automodapi directive in
    ctrl_bps/doc/lsst.ctrl.bps/index.rst to workaround bug.
Since having to test building the docs, included minor text changes:
    Update pipeline syntax from ':' to '#' to match stack changes.
    Fix one missed capitalization change (qgraph_file to qgraphFile).

--- a/doc/lsst.ctrl.bps/pipelines_check.yaml
+++ b/doc/lsst.ctrl.bps/pipelines_check.yaml
@@ -1,4 +1,4 @@
-pipelineYaml: "${OBS_SUBARU_DIR}/pipelines/DRP.yaml:processCcd"
+pipelineYaml: "${OBS_SUBARU_DIR}/pipelines/DRP.yaml#processCcd"
 templateDataId: "{tract}_{patch}_{band}_{visit}_{exposure}_{detector}"
 project: dev
 campaign: quick
