Delay command-line creation until plugin's prepare.
Environment variable specification inside jobs is WMS dependent.
Also, file paths vary based upon which machines are sent the
jobs by the WMS and where the WMS stages some files.  Thus
these variable expansions/replacements are best left to the
WMS plugin.

Polish code changes.
* Updated quick start guide with pipetask command line changes.
* Fixed BpsConfig unit test that changes had broken.
* Finished/fixed some docstrings.
* Made some more quotations marks consistent (single vs double).

Update code per review.
* Change multiple lines with single call to pop().

--- a/tests/data/config.yaml
+++ b/tests/data/config.yaml
@@ -3,6 +3,6 @@ foo:
 bar:
   qux: 2                   # for testing search order (2)
 baz:
-  grault: ${GARPLY}/waldo  # for testing variable expansion
+  grault: ${GARPLY}/waldo/{qux:03}  # for testing variable expansion
   garply:                  # for testing subsection search
     qux: 3
