--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 max-line-length = 110
-ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503
+max-doc-length = 79
+ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
 exclude =
   bin,
   doc,
@@ -10,4 +11,4 @@ exclude =
 
 [tool:pytest]
 addopts = --flake8
-flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503
+flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
