--- a/doc/lsst.ctrl.bps/pipelines_check.yaml
+++ b/doc/lsst.ctrl.bps/pipelines_check.yaml
@@ -1,31 +1,21 @@
 pipelineYaml: "${OBS_SUBARU_DIR}/pipelines/DRP.yaml#processCcd"
-templateDataId: "{tract}_{patch}_{band}_{visit}_{exposure}_{detector}"
+
 project: dev
 campaign: quick
-submitPath: ${PWD}/submit/{outCollection}
 computeSite: ncsapool
-requestMemory: 2048
-requestCpus: 1
 
 # Make sure these values correspond to ones in the bin/run_demo.sh's
 # pipetask command line.
 payload:
-  runInit: true
-  payloadName: pcheck
+  payload_name: pipelines_check
   butlerConfig: ${PIPELINES_CHECK_DIR}/DATA_REPO/butler.yaml
   inCollection: HSC/calib,HSC/raw/all,refcats
-  output: "u/${USER}/pipelines_check"
+  output: "u/{operator}/{payload_name}"
   outCollection: "{output}/{timestamp}"
   dataQuery: exposure=903342 AND detector=10
+  # pipeline config tweaks (used when creating QuantumGraph)
+  #pipelineOptions:
 
 pipetask:
-  pipetaskInit:
-    runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask --long-log run -b {butlerConfig} -i {inCollection} --output {output} --output-run {outCollection} --init-only --register-dataset-types --qgraph {qgraphFile} --no-versions"
-  assembleCoadd:
+  isr:
     requestMemory: 8192
-
-wmsServiceClass: lsst.ctrl.bps.wms.htcondor.htcondor_service.HTCondorService
-clusterAlgorithm: lsst.ctrl.bps.quantum_clustering_funcs.single_quantum_clustering
-createQuantumGraph: '${CTRL_MPEXEC_DIR}/bin/pipetask qgraph -d "{dataQuery}" -b {butlerConfig} -i {inCollection} -p {pipelineYaml} -q {qgraphFile}'
-whenSaveJobQgraph: "NEVER"
-runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask --long-log run -b {butlerConfig} --output {output} --output-run {outCollection} --qgraph {qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --skip-init-writes --extend-run --clobber-outputs --skip-existing --no-versions"
