Allow for automatic retries with increased memory

--- a/python/lsst/ctrl/bps/etc/bps_defaults.yaml
+++ b/python/lsst/ctrl/bps/etc/bps_defaults.yaml
@@ -33,7 +33,8 @@ pipetask:
   #OPT   requestDisk:
   #OPT   requestWalltime:
   #OPT   runQuantumCommand:
-  #OPT   retries:
+  #OPT   memoryMultiplier:
+  #OPT   numberOfRetries:
 
 # Default commands and usage requests for creating QuantumGraph, running Quantum.
 # Defaults to using full workflow QuantumGraph instead of per-job QuantumGraphs.
