Move execution Butler config to a separate file

--- a/doc/lsst.ctrl.bps/pipelines_check_execution_butler.yaml
+++ b/doc/lsst.ctrl.bps/pipelines_check_execution_butler.yaml
@@ -1,30 +1,6 @@
 includeConfigs:
 - ${CTRL_BPS_DIR}/doc/lsst.ctrl.bps/pipelines_check.yaml
+- ${CTRL_BPS_DIR}/doc/lsst.ctrl.bps/execution_butler.yaml
 
-##################################################################################################################
-# The following are default values to be moved to
-# etc/bps_defaults when using execution butler becomes
-# the default.
-executionButler:
-  whenCreate: "SUBMIT"
-  #USER executionButlerDir: "/my/exec/butler/dir"  # if user provided, otherwise uses executionButlerTemplate
-  createCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask qgraph -b {butlerConfig} --input {inCollection} --output-run {outCollection} --save-execution-butler {executionButlerDir} -g {qgraphFile}"
-  whenMerge: "ALWAYS"
-  implementation: JOB  # JOB, WORKFLOW
-  concurrency_limit: db_limit
-
-  # What commands to run as part of the merge step:
-  command1: "${DAF_BUTLER_DIR}/bin/butler --log-level=VERBOSE transfer-datasets  {executionButlerDir} {butlerConfig} --collections {outCollection}"
-  command2: "${DAF_BUTLER_DIR}/bin/butler collection-chain {butlerConfig} {output} {outCollection} --mode=prepend"
-
-  # For --replace-run behavior need to run two collection-chain commands
-  # in addition to the transfer-datasets:
-  #command2: "${DAF_BUTLER_DIR}/bin/butler collection-chain {butlerConfig} {output} --mode=pop 1"
-  #command3: "${DAF_BUTLER_DIR}/bin/butler collection-chain {butlerConfig} {output} --mode=prepend {outCollection}"
-
-pipetask:
-  pipetaskInit:
-    # Notes:  Declaring and chaining now happen within execution butler
-    # steps.  So, this command no longer needs -o and must have
-    # --extend-run.
-    runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask --long-log run -b {butlerConfig} -i {inCollection} --output-run {outCollection} --init-only --register-dataset-types --qgraph {qgraphFile} --extend-run {extraInitOptions}"
+payload:
+  output: u/{operator}/pcheck_ebutler
