--- a/doc/lsst.ctrl.bps/execution_butler.yaml
+++ b/doc/lsst.ctrl.bps/execution_butler.yaml
@@ -17,12 +17,6 @@ executionButler:
 
 pipetask:
   pipetaskInit:
-    # Notes:  Declaring and chaining now happen within execution butler
-    # steps.  So, this command no longer needs -o and must have
-    # --extend-run.
+    # Notes:  Declaring and chaining now happen within execution butler steps.
+    # This command no longer needs -o and must have # --extend-run.
     runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask {initPreCmdOpts} run -b {butlerConfig} -i {inCollection} -o {output} --output-run {outCollection} --qgraph {qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --clobber-outputs --init-only --extend-run {extraInitOptions}"
-
-##same as other? runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask {runPreCmdOpts} run -b {butlerConfig} --output-run {outCollection} --qgraph {qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --clobber-outputs --skip-init-writes --extend-run {extraRunQuantumOptions}"
-##same as other? createQuantumGraph: '${CTRL_MPEXEC_DIR}/bin/pipetask {qgraphPreCmdOpts} qgraph -b {butlerConfig} -i {inCollection} -o {output} --output-run {outCollection} -p {pipelineYaml} -q {qgraphFile} -d "{dataQuery}" {extraQgraphOptions}'
-
-
