--- a/python/lsst/ctrl/bps/etc/bps_defaults.yaml
+++ b/python/lsst/ctrl/bps/etc/bps_defaults.yaml
@@ -35,7 +35,7 @@ payload:
 pipetask:
   pipetaskInit:
     # Notes:  Declaring and chaining now happen within execution butler steps.
-    # This command no longer needs -o and must have # --extend-run.
+    # This command no longer needs -o and must have --extend-run.
     runQuantumCommand: "${CTRL_MPEXEC_DIR}/bin/pipetask {initPreCmdOpts} run -b {butlerConfig} -i {inCollection} -o {output} --output-run {outCollection} --qgraph {qgraphFile} --qgraph-id {qgraphId} --qgraph-node-id {qgraphNodeId} --clobber-outputs --init-only --extend-run {extraInitOptions}"
   #OPT myTask:
   #OPT   requestCpus:
