Add first version of PanDA authentication tools.

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -1,2 +1,10 @@
-from lsst.sconsUtils import scripts
+# -*- python -*-
+import os
+
+from lsst.sconsUtils import env, scripts
 scripts.BasicSConscript.tests(pyList=[])
+
+if "IDDS_CONFIG" in os.environ:
+    env["ENV"]["IDDS_CONFIG"] = os.environ["IDDS_CONFIG"]
+else:
+    env["ENV"]["IDDS_CONFIG"] = f"{os.environ['CTRL_BPS_DIR']}/tests/idds_test.cfg"
