--- a/config/bps_idf.yaml
+++ b/config/bps_idf.yaml
@@ -1,5 +1,5 @@
 #PANDA plugin specific settings:
-iddsServer: "https://aipanda015.cern.ch:443/idds"
+#iddsServer: "https://<hostname>:443/idds"
 placeholderParams: ['qgraphNodeId', 'qgraphId']
 defaultPreCmdOpts: "--long-log --log-level=VERBOSE --log-file payload-log.json"
 
