Fix python package names

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,11 @@ install_requires =
   astropy >=4.0
   pyyaml >=5.1
   click >= 7.0
-  daf_butler @ git+https://github.com/lsst/daf_butler@main
-  pipe_base @ git+https://github.com/lsst/pipe_base@main
-  ctrl_mpexec @ git+https://github.com/lsst/ctrl_mpexec@main
-  lsst_utils @ git+https://github.com/lsst/utils@main
-  lsst_resources @ git+https://github.com/lsst/resources@main
+  lsst-daf-butler @ git+https://github.com/lsst/daf_butler@main
+  lsst-pipe-base @ git+https://github.com/lsst/pipe_base@main
+  lsst-ctrl-mpexec @ git+https://github.com/lsst/ctrl_mpexec@main
+  lsst-utils @ git+https://github.com/lsst/utils@main
+  lsst-resources @ git+https://github.com/lsst/resources@main
 tests_require =
   pytest >= 3.2
   flake8 >= 3.7.5
