--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ click
 astropy
 networkx
 pyyaml
-git+https://github.com/lsst/daf_butler@main#egg=daf_butler
-git+https://github.com/lsst/utils@main#egg=lsst_utils
-git+https://github.com/lsst/pipe_base@main#egg=pipe_base
-git+https://github.com/lsst/resources@main#egg=lsst_resources
-git+https://github.com/lsst/ctrl_mpexec@main#egg=ctrl_mpexec
+git+https://github.com/lsst/daf_butler@main#egg=lsst-daf-butler
+git+https://github.com/lsst/utils@main#egg=lsst-utils
+git+https://github.com/lsst/pipe_base@main#egg=lsst-pipe-base
+git+https://github.com/lsst/resources@main#egg=lsst-resources
+git+https://github.com/lsst/ctrl_mpexec@main#egg=lsst-ctrl-mpexec
