--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["lsst-versions"]
+build-backend = "setuptools.build_meta"
+
 [tool.towncrier]
     package = "lsst.ctrl.bps"
     package_dir = "python"
@@ -44,3 +48,6 @@ target-version = ["py38"]
 [tool.isort]
 profile = "black"
 line_length = 110
+
+[tool.lsst_versions]
+write_to = "python/lsst/ctrl/bps/version.py"
