Use the modern naming convention for package

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = ctrl_bps
+name = lsst-ctrl-bps
 description = Pluggable execution of workflow graphs from Rubin pipelines.
 author = Rubin Observatory Data Management
 url = https://github.com/lsst/ctrl_bps
