--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Build and install
         shell: bash -l {0}
         run: |
-          pip install -v -e .
+          pip install --no-deps -v -e .
 
       - name: Run tests
         shell: bash -l {0}
