Use pypi dependences not git dependencies in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,11 @@ install_requires =
   astropy >=4.0
   pyyaml >=5.1
   click >= 7.0
-  lsst-daf-butler @ git+https://github.com/lsst/daf_butler@main
-  lsst-pipe-base @ git+https://github.com/lsst/pipe_base@main
-  lsst-ctrl-mpexec @ git+https://github.com/lsst/ctrl_mpexec@main
-  lsst-utils @ git+https://github.com/lsst/utils@main
-  lsst-resources @ git+https://github.com/lsst/resources@main
+  lsst-daf-butler
+  lsst-pipe-base
+  lsst-ctrl-mpexec
+  lsst-utils
+  lsst-resources
 tests_require =
   pytest >= 3.2
   flake8 >= 3.7.5
