--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Build and install
         shell: bash -l {0}
         run: |
-          pip install --no-deps -v -e .
+          pip install --no-deps -v .
 
       - name: Run tests
         shell: bash -l {0}
