--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ tests_require =
 [options.packages.find]
 where=python
 
+[options.package_data]
+lsst.ctrl.bps = etc/*.yaml
+
 [flake8]
 max-line-length = 110
 max-doc-length = 79
