--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
     package_dir = "python"
     filename = "doc/lsst.ctrl.bps/CHANGES.rst"
     directory = "doc/changes"
-    title_format = "ctrl_bps {version} {project_date}"
+    title_format = "lsst-ctrl-bps {version} ({project_date})"
     issue_format = "`{issue} <https://jira.lsstcorp.org/browse/{issue}>`_"
 
 
