Pin to only use v24 main versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,11 +22,11 @@ install_requires =
   astropy >=4.0
   pyyaml >=5.1
   click >= 7.0
-  lsst-daf-butler
-  lsst-pipe-base
-  lsst-ctrl-mpexec
-  lsst-utils
-  lsst-resources
+  lsst-daf-butler >=24.0,<24.100
+  lsst-pipe-base >=24.0,<24.100
+  lsst-ctrl-mpexec >=24.0,<24.100
+  lsst-utils >=24.0,<24.100
+  lsst-resources >=24.0,<24.100
 tests_require =
   pytest >= 3.2
   flake8 >= 3.7.5
