--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -35,8 +35,8 @@ jobs:
         run: pip install --no-deps -v .
 
       - name: Install documenteer
-        run: pip install 'documenteer[pipelines]<0.8'
+        run: pip install 'documenteer[pipelines]>0.8,<0.9'
 
       - name: Build documentation
         working-directory: ./doc
-        run: package-docs build
+        run: package-docs build -n -W
